# Unify

./: .editorconfig  .gitignore  CMakeLists.txt  Unify.sln
Editor/: CMakeLists.txt
Engine/: CMakeLists.txt  Engine.vcxproj
Engine/Include/: PrimitiveTypes.h
Sandbox/: CMakeLists.txt
Unify/: CMakeLists.txt
Unify/Source/Private/: Application.cpp  Application.h  Core.h
Unify/Source/Public/: Unify.h
UnifyEditor/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  UnifyEditor.csproj
UnifyEditor/Common/: ViewModelBase.cs
UnifyEditor/Editors/WorldEditor/: WorldEditorView.xaml  WorldEditorView.xaml.cs
UnifyEditor/GameProject/: NewProject.cs  NewProjectView.xaml  NewProjectView.xaml.cs  OpenProjectView.xaml  OpenProjectView.xaml.cs  Project.cs  ProjectBrowserDialog.xaml  ProjectBrowserDialog.xaml.cs  Scene.cs
UnifyEditor/ProjectTemplates/EmptyProject/: project.unify  template.xml
UnifyEditor/Utilities/: Serializer.cs
UnifyEngine/: Class1.cs  UnifyEngine.csproj
UnifyPlayer/: UnifyPlayer.vcxproj
cmake/: CompilerFlags.cmake
